--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20543,7 +20543,7 @@ ZTE:
       model: 'Blade A7s (2020)'
     - regex: 'A7000(?:[);/ ]|$)'
       model: 'Blade A7 (2020)'
-    - regex: 'A7030(?:[);/ ]|$)'
+    - regex: 'A7030'
       model: 'Blade A71'
     - regex: 'A0722(?:[);/ ]|$)'
       model: 'Blade A7 Vita'
