--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -1979,3 +1979,57 @@
     model: Redmi 8A Dual
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 11; V2039 Build/RP1A.200720.012)
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Vivo
+    model: Y12s (2021)
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; NAM-AL00) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.116 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 79.0.3945.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Nova 9
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Nubia 8011) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.74 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.74
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Nubia
+    model: N80
+  os_family: Android
+  browser_family: Chrome
