feat(device) detect new brand Liberton: 24TP1HDTA1 feat(device) detect brand Pioneer: F9212A, F9212B feat(device) detect brand ComTrade Tesla: Smartphone 9.2 feat(device) detect brand Zebra: TC52, TC57 feat(device) detect brand Mobicel: Switch feat(device) detect brand Ghia: GT KIDS 7 (GTKIDS7) feat(device) detect brand Google: Pixel Slate feat(device) detect brand Erisson: 42FLEA73T2SM feat(device) detect brand Kivi: 43U800BR
feat(device) added test for brand Condor: Griffe T9 Plus
feat(device) added tests for brand Philips: S309, S337, S616, V377, V526

--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6348,3 +6348,39 @@
     model: P20HD
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; GTKIDS7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.61 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.61
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Ghia
+    model: GT KIDS 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Google Pixel Slate) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.45 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 79.0.3945.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Google
+    model: Pixel Slate
+  os_family: Android
+  browser_family: Chrome
