--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3832,7 +3832,7 @@ Blaupunkt:
 
 # Bmobile
 Bmobile:
-  regex: 'Bmobile[_ ]|B60Pro_MV03|(?:FUN 4 2018|AX-?(?:[1-9][0-9]{2,3}[eEO+]?|7OO))(?:[);/ ]|$)'
+  regex: 'Bmobile[_ ]|B60Pro_MV03|(?:B50Pro|FUN 4 2018|AX-?(?:[1-9][0-9]{2,3}[eEO+]?|7OO))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AX-?([1-9][0-9]{2,3}[eEO+]?)'
@@ -3843,6 +3843,8 @@ Bmobile:
       model: 'Fun 4 (2018)'
     - regex: 'B60Pro_MV03'
       model: 'B60 Pro'
+    - regex: 'B50Pro'
+      model: 'B50 Pro'
     - regex: 'Bmobile[_ ]([^/;]+) Build'
       model: '$1'
     - regex: 'Bmobile[_ ]([a-z0-9]+)'
@@ -9512,13 +9514,13 @@ KDDI:
 
 # Kodak
 Kodak:
-  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway_T1)(?:[);/ ]|$)'
+  regex: 'KODAK|(?:IM5|KD50|Ektra|Smartway_T1|D60LX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IM5'
       model: 'IM5'
-    - regex: 'KD50'
-      model: 'Seren KD50'
+    - regex: '(KD50|D60LX)'
+      model: 'Seren $1'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1|T3)'
@@ -13537,6 +13539,8 @@ OPPO:
       model: 'A39'
     - regex: 'CPH20(?:81|73|31|15)(?:[);/ ]|$)'
       model: 'A31'
+    - regex: 'CPH2137(?:[);/ ]|$)'
+      model: 'A33'
     - regex: '(?:OPPO[ _]?)?(?:CPH18(?:0[35]|53)|PBBM30)(?:[);/ ]|$)'
       model: 'A3s'
     - regex: '(?:OPPO[ _]?)?(?:CPH1809|PBA[TM]00|PBBT30)(?:[);/ ]|$)'
@@ -22935,6 +22939,17 @@ Logic:
     - regex: 'LOGIC[_ ](X[13]|X4M|L5D|X5[AFT]|X60G|L61)(?:[);/ ]|$)'
       model: '$1'
 
+# Cloud or Cloud TruConnect (www.cloudmobileusa.com)
+Cloud:
+  regex: '(?:Stratus_C5|Sunshine_T1|Cyclone_C4)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: '(Sunshine_T1)'
+      device: 'tablet'
+      model: '$1'
+    - regex: '(Stratus_C5|Cyclone_C4)'
+      model: '$1'
+
 # Cloudpad
 Cloudpad:
   regex: '\+VT(?:107C|Q007C)(?:[);/ ]|$)'
@@ -25812,6 +25827,8 @@ Stylo:
       model: 'Luna'
     - regex: 'INKOSI'
       model: 'Inkosi'
+    - regex: 'Stylo[_ ](521)'
+      model: '$1'
     - regex: 'TARISTAB([2-4])'
       device: 'tablet'
       model: 'Taris Tab $1'
