feat(device) detect brand Rombica: Smart Box D1, Smart Box F2, Smart Box X1,  Smart Box Z1, Smart Box H4, Smart Box G2, Smart Box A1, Smart Box A3,  Smart Box D2 feat(device) added test for brand Samsung: Galaxy Note 8 (SM-N9500)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7903,7 +7903,7 @@ Huawei:
       model: 'Nova 8 Pro 4G'
     - regex: 'BRQ-AN00(?:[);/ ]|$)'
       model: 'Nova 8 Pro 5G'
-    - regex: 'NAM-(?:|AL00|LX9)(?:[);/ ]|$)'
+    - regex: 'NAM-(?:AL00|LX9)(?:[);/ ]|$)'
       model: 'Nova 9'
     - regex: 'DIG-L01(?:[);/ ]|$)'
       model: 'Nova Smart'
@@ -14428,14 +14428,14 @@ Rokit:
     - regex: 'IO 3D'
       model: 'IO 3D'
 
-# Rombica
+# Rombica (rumbica.ru)
 Rombica:
-  regex: '(Rombica|SSQ-A0500|Smart Box v[0-9]+)(?:[);/ ]|$)'
+  regex: '(Rombica|SSQ-A0500|Smart Box v[0-9]+|Smart Box (?:[ADBXZ]1|[GDFQ]2|A3|H4))(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|B1|Q2)|TV Fly)(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|[ADBXZ]1|[GDFQ]2|A3|H4)|TV Fly)(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
