fix: regex for Artel

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4565,7 +4565,7 @@ Compal:
 
 # Artel (artelgroup.org)
 Artel:
-  regex: 'Artel[_ ]|\w+_ARTEL_\w+|(?:GAP YOQ| ALO|U1 MINI|Android 8.+ U4(?!/))(?:[);/ ]|$)'
+  regex: 'Artel[_ ]|\w+_ARTEL_\w+|(?:GAP YOQ| ALO|U1 MINI|Android 8.+; U4)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GAP YOQ(?:[);/ ]|$)'
