Improves version detection for Discord

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -965,3 +965,9 @@
     type: mobile app
     name: Theyub
     version: 7.4.8
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) discord/1.0.9003 Chrome/91.0.4472.164 Electron/13.4.0 Safari/537.36
+  client:
+    type: mobile app
+    name: Discord
+    version: 1.0.9003
