Improves detection for Discord

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -971,3 +971,9 @@
     type: mobile app
     name: Discord
     version: 1.0.9003
+-
+  user_agent: Discord-Updater/1
+  client:
+    type: mobile app
+    name: Discord
+    version: ""
