--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -333,6 +333,10 @@
   name: 'Discord'
   version: ''
 
+- regex: 'Discord-Updater/([\d\.]+)'
+  name: 'Discord'
+  version: ''
+
 # Covenant Eyes (https://apps.apple.com/us/app/covenant-eyes/id335318146)
 - regex: 'Covenant%20Eyes/([\d\.]+)'
   name: 'Covenant Eyes'
