Adds detection for TradingView

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -980,3 +980,8 @@
 - regex: 'BBCNewsUKWatchApp/(\d+[\.\d]+)'
   name: 'BBC News'
   version: '$1'
+
+# TradingView (https://www.tradingview.com/)
+- regex: 'TradingView/(\d+[\.\d]+)'
+  name: 'TradingView'
+  version: '$1'
