--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -977,3 +977,9 @@
     type: mobile app
     name: Discord
     version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) TradingView/1.0.0-beta.15 Chrome/96.0.4664.55 Safari/537.36 TVDesktop/1.0.0-beta.15
+  client:
+    type: mobile app
+    name: TradingView
+    version: 1.0.0
