--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -329,7 +329,7 @@
   name: 'Discord'
   version: '$1'
 
-- regex: 'discord(?:-Updater)?/(\d+\.[.\d]+)'
+- regex: 'discord(?:-Updater)?/([\d\.]+)'
   name: 'Discord'
   version: ''
 
