Adds detection for Instabridge

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -981,3 +981,8 @@
 - regex: 'TradingView/(\d+[\.\d]+)'
   name: 'TradingView'
   version: '$1'
+
+# Instabridge (https://instabridge.com/en/)
+- regex: 'Instabridge'
+  name: 'Instabridge'
+  version: ''
