Adds detection for Kodak Smartway L1 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9554,6 +9554,8 @@ Kodak:
       model: 'Ektra'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([MTX]1|T3)'
       model: 'Smartway $1'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]L1 PRO'
+      model: 'Smartway L1 Pro'
     - regex: 'Tablet (7|10)'
       device: 'tablet'
       model: 'Tablet $1'
