Adds detection for Kodak Smartway L1

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9552,7 +9552,7 @@ Kodak:
       model: 'Seren $1'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ](M2|[MTX]1|T3)'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([LMTX]1|M2|T3)'
       model: 'Smartway $1'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]L1 PRO'
       model: 'Smartway L1 Pro'
