Adds detection for Doro 8080

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5545,9 +5545,11 @@ Dopod:
 
 # Doro (doro.com)
 Doro:
-  regex: 'Doro'
+  regex: 'Doro|DSB-0220'
   device: 'smartphone'
   models:
+    - regex: 'DSB-0220(?:[);/ ]|$)'
+      model: '8080'
     - regex: 'Doro[ _-]?([^;/)]+) Build'
       model: '$1'
     - regex: 'Doro[ _-]([0-9a-z]+)'
