Adds detection for Microsoft Surface Duo 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -322,6 +322,9 @@ Microsoft:
       device: 'desktop'
       model: 'Surface Pro$1'
 
+    - regex: 'Surface Duo 2'
+      device: 'tablet'
+      model: 'Surface Duo 2'
     - regex: 'Surface Duo'
       device: 'tablet'
       model: 'Surface Duo'
