--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -9244,3 +9244,21 @@
     model: Surface Duo
   os_family: Android
   browser_family: Internet Explorer
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; Surface Duo 2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Microsoft
+    model: Surface Duo 2
+  os_family: Android
+  browser_family: Chrome
