Improves detection for Aspera R9

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25199,7 +25199,7 @@ Aspera:
   regex: 'ASPERA|(?:Wren)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'ASPERA[ _](R5h|RT3|A4[02]|A50)(?:[);/ ]|$)'
+    - regex: 'ASPERA[ _](R5h|R9|RT3|A4[02]|A50)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Wren(?:[);/ ]|$)'
       model: 'Wren'
