--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9559,10 +9559,10 @@ Kodak:
       model: 'Seren $1'
     - regex: 'Ektra(?:[);/ ]|$)'
       model: 'Ektra'
-    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([FLMTX]1|[LM]2|T3)'
-      model: 'Smartway $1'
     - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]L1 PRO'
       model: 'Smartway L1 Pro'
+    - regex: '(?:KODAK[_ ])?SMARTWAY[_ ]([FLMTX]1|[LM]2|T3)'
+      model: 'Smartway $1'
     - regex: 'Tablet (7|10)'
       device: 'tablet'
       model: 'Tablet $1'
@@ -25506,10 +25506,10 @@ KREZ:
 
 # KRIP (https://www.krip.com/)
 KRIP:
-  regex: 'K(?:4m?|5[bdm]?|6b?|55h|57|65)(?:[);/ ]|$)'
+  regex: 'K(?:4m?|5[bdm]?|6b|55h|57|65)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'K(4m?|5[bdm]?|6b?|55h|57|65)(?:[);/ ]|$)'
+    - regex: 'K(4m?|5[bdm]?|6b|55h|57|65)(?:[);/ ]|$)'
       model: 'K$1'
 
 # Kurio or KD Interactive (www.group-kd.com, kdplanet.com)
