Adds detection for MobiIoT brand and MobiIoT MobiPrint 4 Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12074,6 +12074,14 @@ Mobistel:
   device: 'smartphone'
   model: '$1'
 
+# MobiIoT (https://mobi-iot.com/)
+MobiIoT:
+  regex: 'MobiPrint 4+(?:[);/ ]|$)'
+  device: 'peripheral'
+  models:
+    - regex: 'MobiPrint 4+(?:[);/ ]|$)'
+      model: 'MobiPrint 4 Plus'
+
 # Mecool
 Mecool:
   regex: '(?:KM9PRO|BB2 PRO|K[I]{1,3} PRO|KI PLUS|KM9_TV_BOX|M8SPROW|M8S (?:PLUS|PRO) (?:DVB|[LW]|PLUS)|M8S (?:MAX|PRO))(?:[);/ ]|$)'
