Adds detection for DISH brand and DISH Celero 5G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -25765,6 +25765,14 @@ DIGIFORS:
   device: 'tv'
   model: 'Smart $1'
 
+# DISH (https://www.dish.com/)
+DISH:
+  regex: 'WTCELERO5G(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'WTCELERO5G'
+      model: 'Celero 5G'
+
 # VIWA
 VIWA:
   regex: '(?:LIGHT MINI|VIWA A5\+|LIGHT PLUS)(?:[);/ ]|$)'
